[gd_scene load_steps=35 format=3 uid="uid://mlj24b2hk5qs"]

[ext_resource type="Script" path="res://Characters/player_cat.gd" id="1_3g48s"]
[ext_resource type="Texture2D" uid="uid://tk782ybaj181" path="res://Art/map_update.png" id="2_ujeve"]
[ext_resource type="AudioStream" uid="uid://4dv5y26kn1wy" path="res://Audio/boulder_push.mp3" id="3_0iw3q"]
[ext_resource type="AudioStream" uid="uid://b3fd7bewmhwoc" path="res://Audio/player_walk.mp3" id="3_jjbgt"]
[ext_resource type="AudioStream" uid="uid://cglgt8c1iwqq3" path="res://Audio/door_unlock.mp3" id="5_1keuu"]
[ext_resource type="AudioStream" uid="uid://dussxk1yw7nfa" path="res://Audio/acquired_key_sound.wav" id="5_k73wt"]
[ext_resource type="AudioStream" uid="uid://6krfaxtw4awd" path="res://Audio/mining_rock_sound.mp3" id="7_k34pk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5w10"]
size = Vector2(12, 19)

[sub_resource type="Animation" id="Animation_tc5ko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 8)]
}

[sub_resource type="Animation" id="Animation_ogwiw"]
resource_name = "idle_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_0i4am"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_4nonf"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_brgri"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_lwudc"]
resource_name = "mining_left"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.23, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(2, 8), Vector2i(3, 8)]
}

[sub_resource type="Animation" id="Animation_b7btv"]
resource_name = "mining_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.2315, 0.336),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 26, 27]
}

[sub_resource type="Animation" id="Animation_8vklt"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_xsxp1"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_7qrdh"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ohwlr"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vl27n"]
_data = {
"RESET": SubResource("Animation_tc5ko"),
"idle_down": SubResource("Animation_ogwiw"),
"idle_left": SubResource("Animation_0i4am"),
"idle_right": SubResource("Animation_4nonf"),
"idle_up": SubResource("Animation_brgri"),
"mining_left": SubResource("Animation_lwudc"),
"mining_right": SubResource("Animation_b7btv"),
"walk_down": SubResource("Animation_8vklt"),
"walk_left": SubResource("Animation_xsxp1"),
"walk_right": SubResource("Animation_7qrdh"),
"walk_up": SubResource("Animation_ohwlr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f42by"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_liy5f"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bfr7b"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o1q0d"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p81vr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f42by")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_liy5f")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bfr7b")
blend_point_2/pos = Vector2(1, 2.08167e-14)
blend_point_3/node = SubResource("AnimationNodeAnimation_o1q0d")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_440wx"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k5buu"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6pkgc"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fxpdl"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3eh0c"]
blend_point_0/node = SubResource("AnimationNodeAnimation_440wx")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_k5buu")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6pkgc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_fxpdl")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n8b3v"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s2dx2"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xftbc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mdfa6"]
states/End/position = Vector2(681, 121.5)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_p81vr")
states/Idle/position = Vector2(327.5, 99.9893)
states/Start/position = Vector2(199, 100.041)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_3eh0c")
states/Walk/position = Vector2(479, 99.9375)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_n8b3v"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_s2dx2"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_xftbc")]
graph_offset = Vector2(-1.18283e-05, 19.3875)

[node name="PlayerCat" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_3g48s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("2_ujeve")
hframes = 4
vframes = 9
frame = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_d5w10")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vl27n")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mdfa6")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.00220263, 1.04693)
parameters/Walk/blend_position = Vector2(0.309471, 0.0144737)

[node name="AudioStreamPlayer_Pushing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0iw3q")
volume_db = -5.0

[node name="AudioStreamPlayer_Walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jjbgt")
volume_db = -25.0

[node name="AudioStreamPlayer_DoorUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1keuu")

[node name="AudioStreamPlayer_Key" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k73wt")
volume_db = -18.0

[node name="AudioStreamPlayer_MineRock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_k34pk")
volume_db = -16.0
